...
        incomingVoiceCallPageMessage: 'Llamada de voz de tu viaje',
        incomingCallPageDeclineButton: 'Rechazar',
        incomingCallPageAcceptButton: 'Aceptar',
        outgoingCallPageACancelButton: 'Cancelar',
        outgoingVoiceCallPageMessage: 'Llamando…',
        permissionConfirmDialogTitle: 'Permiso de micrófono',
        permissionConfirmDialogAllowButton: 'Permitir',
        permissionConfirmDialogDenyButton: 'No permitir',
        permissionConfirmDialogCancelButton: 'Cancelar',
        permissionConfirmDialogOKButton: 'Aceptar',
        callingToolbarMicrophoneButtonText: 'Micrófono',
        callingToolbarMicrophoneOnButtonText: 'Micrófono',
        callingToolbarMicrophoneOffButtonText: 'Micrófono apagado',
...
